--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
 body {
     background-color: bisque;
 }
+
+header {
+    background-color: antiquewhite;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: lighter;
+}
+
+#h1 {
+    text-align: center;
+}
