--- a/style.css
+++ b/style.css
@@ -7,3 +7,12 @@ header {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: lighter;
 }
+
+footer {
+    background-color: darksalmon;
+    color: black;
+    text-align: center;
+    margin-top: 50px;
+    font-size: 0.9rem;
+    opacity: 0.7;
+}
